objects/Mil_Push_Message__c/Mil_Push_Message__c.object-meta.xml
<CustomObject>
    <label>Mil_Push_Message</label>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Mil_Push_Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mil_Push_Message</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>