objects/Mil_Push_Message__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Create Date</label>
    <type>DateTime</type>
</CustomField>