objects/Mil_Push_Message__c/fields/Google_Batch_Processed__c.field-meta.xml
<CustomField>
    <fullName>Google_Batch_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used by MilMoveSFGooglePushNotificationBatch and MilMoveSFApplePushNotificationBatch</description>
    <inlineHelpText>Only used by MilMoveSFGooglePushNotificationBatch and MilMoveSFApplePushNotificationBatch</inlineHelpText>
    <label>Google Batch Processed</label>
    <type>Checkbox</type>
</CustomField>