objects/Mil_Push_Message__c/fields/Message_CH__c.field-meta.xml
<CustomField>
    <fullName>Message_CH__c</fullName>
    <label>Message CH</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>