objects/Mil_Push_Message__c/fields/Message_EN__c.field-meta.xml
<CustomField>
    <fullName>Message_EN__c</fullName>
    <label>Message EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>