objects/Mil_Push_Message__c/fields/Notification_ID__c.field-meta.xml
<CustomField>
    <fullName>Notification_ID__c</fullName>
    <label>Notification ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>