objects/Mil_Push_Message__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>