objects/Mil_Push_Message__c/fields/User_ID_Message_ID_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>User_ID_Message_ID_Concatenated__c</fullName>
    <formula>User_Id__c &amp; "-" &amp; Message_ID__c</formula>
    <label>User_ID_Message_ID_Concatenated</label>
    <type>Text</type>
</CustomField>